feat(service::impl): upgrade to utilize audit log service